--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
         <h2 class="titulo-principal">Meus Objetivos da minha vida<span>_</span></h2>
         <div class="conteudo">
         <div class="botoes">
-            <button class="botao ativo">Emagrecer 5 kilos</button>
-            <button class="botao"> TRABALHAR (obj de Jesus</button>
-            <button class="botao">Correr dias alternados</button>
-            <button class="botao">Atualizar meu currículo</button>
+            <button class="botao ativo">Emagrecer 50 kilos</button>
+            <button class="botao">Pegar o pers. Acheron</button>
+            <button class="botao">Passar o modo hist. nas tres contas</button>
+            <button class="botao">Arrumar um trabalho</button>
         </div>
         <div class="abas-textos">
             <div class="aba-conteudo ativo">
-                <h3 class="aba-conteudo-titulo-principal">Emagrecer 5 kilos</h3>
-                <h4 class="aba-conteudo-titulo-secundario"></h4>
+                <h3 class="aba-conteudo-titulo-principal">Emagrecer 50 kilos</h3>
+                <h4 class="aba-conteudo-titulo-secundario">exercitar</h4>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Aprender a tocar viola caipira</h3>
-                <h4 class="aba-conteudo-titulo-secundario"></h4>
+                <h3 class="aba-conteudo-titulo-principal">Pegar o pers. Acheron</h3>
+                <h4 class="aba-conteudo-titulo-secundario">tenho 50 tiros preparado, MAS NECESSITO DE MAIS!!!</h4>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Correr dias alternados</h3>
-                <h4 class="aba-conteudo-titulo-secundario"></h4>
+                <h3 class="aba-conteudo-titulo-principal">Passar o modo hist. nas tres contas</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Conta principal, secundaria, e do Ricardo</h4>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Atualizar meu currículo</h3>
-                <h4 class="aba-conteudo-titulo-secundario"></h4>
+                <h3 class="aba-conteudo-titulo-principal">Arrumar um trabalho</h3>
+                <h4 class="aba-conteudo-titulo-secundario">gastar em jogo de anime com aposta👍</h4>
             </div>
             
         </div>
