--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
         <h2 class="titulo-principal">Meus Objetivos da minha vida<span>_</span></h2>
         <div class="conteudo">
         <div class="botoes">
-            <button class="botao ativo">Emagrecer 50 kilos</button>
-            <button class="botao">Pegar o pers. Acheron</button>
+            <button class="botao">Emagrecer 50 kilos</button>
+            <button class="botao ativo">Pegar o pers. Acheron</button>
             <button class="botao">Passar o modo hist. nas tres contas</button>
             <button class="botao">Arrumar um trabalho</button>
         </div>
         <div class="abas-textos">
-            <div class="aba-conteudo">
+            <div class="aba-conteudo ativo">
                 <h3 class="aba-conteudo-titulo-principal">Emagrecer 50 kilos</h3>
                 <h4 class="aba-conteudo-titulo-secundario">exercitar</h4>
             </div>
-            <div class="aba-conteudo ativo">
+            <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Pegar o pers. Acheron</h3>
                 <h4 class="aba-conteudo-titulo-secundario">tenho 50 tiros preparado, MAS NECESSITO DE MAIS!!!</h4>
             </div>
