--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="conteudo">
         <div class="botoes">
             <button class="botao">Emagrecer 50 kilos</button>
-            <button class="botao ativo">Pegar o pers. Acheron</button>
-            <button class="botao">Passar o modo hist. nas tres contas</button>
+            <button class="botao">Pegar o pers. Acheron</button>
+            <button class="botao ativo">Passar o modo hist. nas tres contas</button>
             <button class="botao">Arrumar um trabalho</button>
         </div>
         <div class="abas-textos">
