--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <h2 class="titulo-principal">Meus Objetivos da minha vida<span>_</span></h2>
         <div class="conteudo">
         <div class="botoes">
-            <button class="botao">Emagrecer 50 kilos</button>
+            <button class="botao ativo">Emagrecer 50 kilos</button>
             <button class="botao">Pegar o pers. Acheron</button>
             <button class="botao">Passar o modo hist. nas tres contas</button>
-            <button class="botao ativo">Arrumar um trabalho</button>
+            <button class="botao">Arrumar um trabalho</button>
         </div>
         <div class="abas-textos">
             <div class="aba-conteudo ativo">
