--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> //agora este documento é propriedade do KAYKY
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
