--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <h2 class="titulo-principal">Meus Objetivos da vida<span>_</span></h2>
         <div class="conteudo">
         <div class="botoes">
-            <button class="botao ativo">Completar o curso Ferretto</button>
-            <button class="botao">Ficar rica</button>
-            <button class="botao">Passar na federal</button>
-            <button class="botao">Be Happy</button>
+            <button class="botao ativo">Jogar Honkai Star Rail</button>
+            <button class="botao">Cursos SENAC</button>
+            <button class="botao">Curso IFPR</button>
+            <button class="botao">Trabalhos...</button>
         </div>
         <div class="abas-textos">
             <div class="aba-conteudo ativo">
