--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
         </div>
         <div class="abas-textos">
             <div class="aba-conteudo ativo">
-                <h3 class="aba-conteudo-titulo-principal">Objetivos da vida</h3>
+                <h3 class="aba-conteudo-titulo-principal">Juntar JADES para Firefly</h3>
                 <h4 class="aba-conteudo-titulo-secundario"></h4>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Aprender a tocar viola caipira</h3>
+                <h3 class="aba-conteudo-titulo-principal">Completar o curso de lógica de programação</h3>
                 <h4 class="aba-conteudo-titulo-secundario"></h4>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Correr dias alternados</h3>
-                <h4 class="aba-conteudo-titulo-secundario"></h4>
+                <h3 class="aba-conteudo-titulo-principal">Cursinho preparatório</h3>
+                <h4 class="aba-conteudo-titulo-secundario">*bottom text*</h4>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Atualizar meu currículo</h3>
-                <h4 class="aba-conteudo-titulo-secundario"></h4>
+                <h3 class="aba-conteudo-titulo-principal">*Upper text*</h3>
+                <h4 class="aba-conteudo-titulo-secundario">*Bottom text*</h4>
             </div>
             
         </div>
