--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> //agora este documento é propriedade do KAYKY v3.1
+<!DOCTYPE html> //agora este documento é propriedade do KAYKY v3.2
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -11,17 +11,17 @@
         <h2 class="titulo-principal">Meus Objetivos da vida<span>_</span></h2>
         <div class="conteudo">
         <div class="botoes">
-            <button class="botao ativo">Jogar Honkai Star Rail</button>
-            <button class="botao">Cursos SENAC</button>
+            <button class="botao">Jogar Honkai Star Rail</button>
+            <button class="botao ativo">Cursos SENAC</button>
             <button class="botao">Curso IFPR</button>
             <button class="botao">Trabalhos...</button>
         </div>
         <div class="abastextos">
-            <div class="aba-conteudo ativo">
+            <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Juntar JADES para Firefly</h3>
                 <h4 class="aba-conteudo-titulo-secundario"></h4>
             </div>
-            <div class="aba-conteudo">
+            <div class="aba-conteudo ativo">
                 <h3 class="aba-conteudo-titulo-principal">Completar o curso de lógica de programação</h3>
                 <h4 class="aba-conteudo-titulo-secundario"></h4>
             </div>
