--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> //agora este documento é propriedade do KAYKY v3.2
+<!DOCTYPE html> //agora este documento é propriedade do KAYKY v3.3
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,7 @@
             <button class="botao">Curso IFPR</button>
             <button class="botao">Trabalhos...</button>
         </div>
-        <div class="abastextos">
+        <div class="abas-textos">
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Juntar JADES para Firefly</h3>
                 <h4 class="aba-conteudo-titulo-secundario"></h4>
